--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed:clients": "ts-node -r tsconfig-paths/register src/scripts/seed-clients.ts",
+    "seed:test-data": "ts-node -r tsconfig-paths/register src/scripts/seed-test-data.ts",
+    "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
