--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed:clients": "ts-node -r tsconfig-paths/register src/scripts/seed-clients.ts",
     "seed:test-data": "ts-node -r tsconfig-paths/register src/scripts/seed-test-data.ts",
-    "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts"
+    "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts",
+    "generate:postman": "node src/scripts/postman-generator/postman-generator.js",
+    "run:postman": "newman run postman/mva-backend-collection.json -e postman/environment.json --reporters cli,html --reporter-html-export postman/report.html"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -62,8 +64,11 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "glob": "^11.0.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "newman": "^6.2.1",
+    "newman-reporter-html": "^1.0.5",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -71,7 +76,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
