--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "seed:test-data": "ts-node -r tsconfig-paths/register src/scripts/seed-test-data.ts",
     "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts",
     "seed:postman": "ts-node -r tsconfig-paths/register src/scripts/create-postman-test-data.ts",
-    "generate:postman": "node src/scripts/postman-generator/postman-generator.js",
-    "run:postman": "newman run postman/mva-backend-collection.json -e postman/environment.json --reporters cli,html --reporter-html-export postman/report.html",
-    "setup:postman": "npm run seed:postman && npm run run:postman"
+    "generate:postman": "node src/scripts/postman-generator/postman-generator.js"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -69,8 +67,6 @@
     "glob": "^11.0.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "newman": "^6.2.1",
-    "newman-reporter-html": "^1.0.5",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
