--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": "./",
     "paths": {
-      "src/*": ["src/*"]
+      "src/": ["src/"]
     },
     "incremental": true,
     "skipLibCheck": true,
