Fix: Resuelve problemas de base de datos y configuración
- Corrige configuración de TypeORM para excluir archivos mock y test
- Cambia NODE_ENV a development temporalmente para permitir synchronize
- Agrega logs de debug en database.config.ts
- Corrige consulta en recent-activity.service.ts (vehiculo.id -> vehiculo.vehiculo_id)
- Actualiza ecosystem.config.json para usar desarrollo
- Agrega certificados SSL temporales
- Excluye archivos mock del build en tsconfig.build.json

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -2,12 +2,12 @@
   "apps": [
     {
       "name": "mva-backend",
-      "script": "dist/src/main.js",
+      "script": "dist/main.js",
       "instances": 1,
       "exec_mode": "cluster",
       "env": {
-        "NODE_ENV": "production",
-        "PORT": "3000"
+        "NODE_ENV": "development",
+        "PORT": "3002"
       },
       "env_production": {
         "NODE_ENV": "production",
