fix: Actualizar validación y estructura CBU a 22 dígitos
- Actualizar DTOs de empleados para validar CBU con exactamente 22 dígitos
- Modificar entidad Employee para aumentar longitud de columna CBU a 22
- Agregar script de migración SQL para actualizar base de datos existente
- Agregar script Node.js para ejecutar migración programáticamente
- Incluir nuevo comando npm 'migrate:cbu' para ejecutar migración
- Cumplir con estándar argentino de CBU (22 dígitos exactos)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "deploy:https": "bash scripts/deploy-https.sh",
     "seed:clients": "ts-node -r tsconfig-paths/register src/scripts/seed-clients.ts",
     "seed:test-data": "ts-node -r tsconfig-paths/register src/scripts/seed-test-data.ts",
-    "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts"
+    "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts",
+    "migrate:cbu": "ts-node -r tsconfig-paths/register src/scripts/migrate-cbu-length.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
