--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "seed:clients": "ts-node -r tsconfig-paths/register src/scripts/seed-clients.ts",
     "seed:test-data": "ts-node -r tsconfig-paths/register src/scripts/seed-test-data.ts",
     "seed:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin-standalone.ts",
-    "migrate:cbu": "ts-node -r tsconfig-paths/register src/scripts/migrate-cbu-length.ts"
+    "migrate:cbu": "ts-node -r tsconfig-paths/register src/scripts/migrate-cbu-length.ts",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/data-source-dev.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/config/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
